--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                 <div class="card text-center"><img class="card-img-top" src="images/customer3.jpg" alt="">
                     <div class="card-body">
                         <h5>Trisna H<br/>
-                            <span> IT Programmer </span></h5>
+                            <span> AI Engineer </span></h5>
                         <p class="card-text"> </p>
                     </div>
                 </div>
