--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <p><b>Kami</b> menyediakan jasa internet corporate/premium, Internet boradband dengan koneksi kecepatan tinggi dan 
 				mempergunakan teknologi wireless dengan banckbone FIBER OPTIK.
 			    </p>
-                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20ingin%20Langganan%20Internet%20Kak.%20">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20ingin%20Langganan%20Internet%20Kak.%20" target="_blank">Contact Us <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-md-6">
                 <div class="card"><img class="card-img-top img-fluid" src="images/banner-img.png" alt=""></div>
             </div>
@@ -96,7 +96,7 @@
                     <small
                     </small>
                 </p>
-                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20ingin%20Menanyakan%20Jasa%20Yang%20Tersedia%20">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20ingin%20Menanyakan%20Jasa%20Yang%20Tersedia%20" target="_blank">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
         </div>
     </div>
 </div>
@@ -108,7 +108,7 @@
                     yang Kami Tawarkan Untuk Anda </h2>
                 <p> Percayakan perencanaan, implementasi, dan operasional Digital anda sehari-hari 
                     pada tim kami yang dapat mengoptimalkan kemampuan sumber daya Digital serta melakukan efisiensi biaya. </p>
-                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20Ingin%20Mengajak%20Perencanaan%20Digital.%20">All Services <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+                <a href="https://api.whatsapp.com/send?phone=6283863796152&text=Saya%20Ingin%20Mengajak%20Perencanaan%20Digital.%20" target="_blank">All Services <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
             <div class="col-lg-8">
                 <svg id="bg-services"
                      width="100%"
