--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     <link rel="stylesheet" href="css/style.css">
     <title>aesbe</title>
     <style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1148033349038628"
+     crossorigin="anonymous"></script>
 
     </style>
 </head>
