--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
 
     </style>
 </head>
+<head>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1148033349038628"
+     crossorigin="anonymous"></script>
+</head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
     <div class="container"><a class="navbar-brand">aesbe</a>
