--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <h2> Kami adalah Kelompok 
 				     Digital Kreatif </h2>
                 <p> Kami juga menyediakan jasa Software/Hadware service Layanan pengembangan dengan menggunakan teknik dasar 
-                    pengetahuan. serta pengembangan berbasis Visual Computer, 
+                    pengetahuan/pengalaman. serta pengembangan berbasis Visual Computer, 
 					Web Design, Web Development,Web Maintenance, Cloud computer, Sinematografi, </p>
                 <p>
                     <small
